added html structure

--- a/index.html
+++ b/index.html
@@ -1,45 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./tailwind.css">
-  <title>Chat-App Illustration</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="./tailwind.css">
+    <title>Chat-App Illustration</title>
 
 </head>
 <body>
+    <main>
+        <section>
+            <div>
+                <i class="fas fa-chevron-left"></i>
+                <img src="" alt="">
+                <div>
+                    <h2>Samuel Green</h2>
+                    <p>Available to Walk</p> 
+                </div>
+                <i class="fas fa-ellipsis-v"></i>
+            </div>
 
-  Samuel Green
-  Available to Walk
+            <div>
+                <div>
+                    <div>That sounds great. I’d be happy with that.</div>
+                    <div>Could you send over some pictures of your dog, please?</div>
+                    <div>
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                    <div>Here are a few pictures. She’s a happy girl!</div>
+                    <div>Can you make it?</div>
+                    <div>She looks so happy! The time we discussed works. How long shall I take her out for?</div>
+                    <div>30 minute walk$29</div>
+                    <div>1 hour walk$49</div>
+                </div>
+            </div>
 
-  That sounds great. I’d be happy with that.
+            <div>
+                <p>Type a message…</p>
+                <div><i class="fas fa-chevron-right"></i></div>
+            </div>
+        </section>
+        <article>
+            <h1>Simple booking</h1>
+            <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+                discuss arrangements and make bookings. Once the walk has been completed you can rate 
+                your walker and book again all through the chat.</p>
+        </article>
+    </main>
 
-  Could you send over some pictures of your dog, please?
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Your Name Here</a>.
+    </div>
 
-  Here are a few pictures. She’s a happy girl!
-
-  Can you make it?
-
-  She looks so happy! The time we discussed works. How long shall I take her out for?
-
-  30 minute walk
-  $29
-
-  1 hour walk
-  $49
-
-  Type a message…
-
-  Simple booking
-
-  Stay in touch with our dog walkers through the chat interface. This makes it easy to 
-  discuss arrangements and make bookings. Once the walk has been completed you can rate 
-  your walker and book again all through the chat.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <script src="https://kit.fontawesome.com/00d4002082.js" crossorigin="anonymous"></script>
 </body>
 </html>
