--- a/index.html
+++ b/index.html
@@ -9,52 +9,69 @@
 
 </head>
 <body>
-    <main>
-        <section>
-            <div>
-                <i class="fas fa-chevron-left"></i>
-                <img src="" alt="">
-                <div>
-                    <h2>Samuel Green</h2>
-                    <p>Available to Walk</p> 
-                </div>
-                <i class="fas fa-ellipsis-v"></i>
-            </div>
+    <main class="py-10">
 
-            <div>
-                <div>
-                    <div>That sounds great. I’d be happy with that.</div>
-                    <div>Could you send over some pictures of your dog, please?</div>
-                    <div>
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+        <section class="font-sans flex justify-center align-center">
+            <div class="w-9/12 shadow-2xl rounded-4xl">
+                <div class="static m-3 pb-px bg-gray-100 rounded-3xl">
+                    <div class="bg-white absolute w-1/3 h-5 left-1/3 rounded-b-2xl"></div>
+
+                    <div class="text-white bg-gradient-to-r from-purple-500 to-pink-500 rounded-t-2xl rounded-b-lg pt-6 p-2 flex items-center justify-between">
+                        <div class="flex flex-row items-center">
+                            <i class="fas fa-chevron-left text-sm"></i>
+                            <img class="rounded-full border border-white w-8 h-8 mx-2" src="./images/avatar.jpg" alt="chat avatar">
+                            <div>
+                                <h2 class="text-sm font-semibold">Samuel Green</h2>
+                                <p class="text-xs font-light">Available to Walk</p> 
+                            </div>
+                        </div>
+                        <i class="fas fa-ellipsis-v text-sm"></i>
                     </div>
-                    <div>Here are a few pictures. She’s a happy girl!</div>
-                    <div>Can you make it?</div>
-                    <div>She looks so happy! The time we discussed works. How long shall I take her out for?</div>
-                    <div>30 minute walk$29</div>
-                    <div>1 hour walk$49</div>
-                </div>
-            </div>
 
-            <div>
-                <p>Type a message…</p>
-                <div><i class="fas fa-chevron-right"></i></div>
+                    <div class="text-xs">
+                        <div class="bg-purple-100 text-purple-800 w-3/5 m-2 py-1 px-2 rounded-xl rounded-bl shadow">That sounds great. I’d be happy to discuss more.</div>
+                        <div class="bg-purple-100 text-purple-800 w-3/5 m-2 py-1 px-2 rounded-xl rounded-bl shadow">Could you send over some pictures of your dog, please?</div>
+                        <div class="flex flex-col items-end">
+                            <div class="flex justify-end m-2">
+                                <img class="rounded-xl w-12 m-1" src="./images/dog-image-1.jpg" alt="dog pic 1">
+                                <img class="rounded-xl w-12 m-1" src="./images/dog-image-2.jpg" alt="dog pic 2">
+                                <img class="rounded-xl w-12 m-1" src="./images/dog-image-3.jpg" alt="dog pic 3">
+                            </div>
+                            <div class="bg-white text-gray-600 w-3/5 m-2 py-1 px-2 rounded-xl rounded-br shadow-md">Here are a few pictures. She’s a happy girl!</div>
+                            <div class="bg-white text-gray-600 m-2 py-1 px-2 rounded-xl rounded-br shadow-md">Can you make it?</div>
+                        </div>
+                        
+                        <div class="bg-purple-100 text-purple-800 w-3/5 m-2 py-1 px-2 rounded-xl rounded-bl shadow">She looks so happy! The time we discussed works. How long shall I take her out for?</div>
+                        <div class="text-white bg-gradient-to-r from-purple-500 to-pink-500 w-3/5 m-2 py-1 px-2 rounded-xl rounded-bl shadow">
+                            <input class="border border-transparent focus:outline-none" type="radio" id="30min" name="walk" value="30min">
+                            <label for="30min">30 minute walk <span class="text-lg font-bold">$29</span> </label>
+                        </div>
+                        <div class="text-white bg-gradient-to-r from-purple-500 to-pink-500 w-3/5 m-2 py-1 px-2 rounded-xl rounded-bl shadow">
+                            <input class="border border-transparent focus:outline-none" type="radio" id="1h" name="walk" value="1h">
+                            <label for="1h">1 hour walk <span class="text-lg font-bold">$49</span></label>
+                        </div>
+                    </div>
+
+                    <div class="bg-white m-2 mt-4 px-3 py-2 rounded-2xl flex justify-between">
+                        <p class="text-gray-300">Type a message…</p>
+                        <div class="bg-purple-900 text-white w-8 h-8 rounded-full flex justify-center items-center"><i class="fas fa-chevron-right"></i></div>
+                    </div>
+                </div>
             </div>
         </section>
-        <article>
-            <h1>Simple booking</h1>
-            <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+
+        <article class="text-center pt-12 ">
+            <h1 class="text-4xl text-purple-900 font-bold">Simple booking</h1>
+            <p class="text-gray-500 py-6 px-10">Stay in touch with our dog walkers through the chat interface. This makes it easy to 
                 discuss arrangements and make bookings. Once the walk has been completed you can rate 
                 your walker and book again all through the chat.</p>
         </article>
     </main>
 
-    <div class="attribution">
+    <!-- <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div> -->
 
     <script src="https://kit.fontawesome.com/00d4002082.js" crossorigin="anonymous"></script>
 </body>
