--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 </head>
 <body>
-    <main class="py-10">
+    <main class="py-10 md:p-10 m-auto flex flex-col md:flex-row md:items-center md:justify-evenly h-screen max-w-screen-xl">
 
         <section class="font-sans flex justify-center align-center">
-            <div class="w-9/12 shadow-2xl rounded-4xl">
-                <div class="static m-3 pb-px bg-gray-100 rounded-3xl">
-                    <div class="bg-white absolute w-1/3 h-5 left-1/3 rounded-b-2xl"></div>
+            <div class="w-80 shadow-2xl rounded-4xl">
+                <div class="relative m-3 pb-px bg-gray-100 rounded-3xl">
+                    <div class="bg-white absolute w-36 h-5 left-1/4 rounded-b-2xl"></div>
 
                     <div class="text-white bg-gradient-to-r from-purple-500 to-pink-500 rounded-t-2xl rounded-b-lg pt-6 p-2 flex items-center justify-between">
                         <div class="flex flex-row items-center">
@@ -52,17 +52,17 @@
                         </div>
                     </div>
 
-                    <div class="bg-white m-2 mt-4 px-3 py-2 rounded-2xl flex justify-between">
-                        <p class="text-gray-300">Type a message…</p>
+                    <div class="bg-white m-2 mt-4 px-3 py-2 rounded-2xl flex justify-between items-center">
+                        <p class="text-xs text-gray-300">Type a message…</p>
                         <div class="bg-purple-900 text-white w-8 h-8 rounded-full flex justify-center items-center"><i class="fas fa-chevron-right"></i></div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <article class="text-center pt-12 ">
+        <article class="text-center pt-12 flex flex-col items-center">
             <h1 class="text-4xl text-purple-900 font-bold">Simple booking</h1>
-            <p class="text-gray-500 py-6 px-10">Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+            <p class="text-gray-500 py-6 px-10 max-w-xl">Stay in touch with our dog walkers through the chat interface. This makes it easy to 
                 discuss arrangements and make bookings. Once the walk has been completed you can rate 
                 your walker and book again all through the chat.</p>
         </article>
