--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="absolute top-0 bg-gradient-to-t from-custom-purple to-custom-pink w-1/2 h-2/3 -z-10 rounded-br-full 
     md:w-2/5 md:max-w-md md:h-4/5 md:rounded-b-full md:-left-24">
     </div>
-    <div class="absolute bottom-0 -right-10 -bottom-20 bg-gradient-to-t from-light-purple to-light-pink w-1/2 h-2/5 -z-10 rounded-tl-full 
-    md:w-2/5 md:max-w-md md:h-4/5 md:rounded-t-full md:-right-24">
+    <div class="absolute -right-10 -bottom-20 bg-gradient-to-t from-light-purple to-light-pink w-1/2 h-2/5 -z-10 rounded-tl-full 
+    md:w-2/5 md:max-w-md md:h-4/5 md:rounded-t-full md:-right-24 md:bottom-0">
     </div>
 
     <main class="py-10 md:p-10 m-auto flex flex-col md:flex-row md:items-center md:justify-evenly h-screen max-w-screen-xl">
