added attribution on bottom of the page

--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
                 discuss arrangements and make bookings. Once the walk has been completed you can rate 
                 your walker and book again all through the chat.</p>
         </article>
+        <div class="bg-purple-200 text-gray-600 text-xs text-center">
+            Challenge by <a class="hover:text-purple-700" href="https://www.frontendmentor.io/challenges/chat-app-css-illustration-O5auMkFqY" target="_blank">Frontend Mentor</a>. 
+            Coded by <a class="hover:text-purple-700" href="https://github.com/Tanya-Amber-L/" target="_blank">Tanya Leenders</a>.
+        </div>
     </main>
-
-    <!-- <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
-    </div> -->
 
     <script src="https://kit.fontawesome.com/00d4002082.js" crossorigin="anonymous"></script>
 </body>
