added attribution on bottom of the page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     md:w-2/5 md:max-w-md md:h-4/5 md:rounded-t-full md:-right-24 md:bottom-0">
     </div>
 
-    <main class="py-10 md:p-10 m-auto flex flex-col md:flex-row md:items-center md:justify-evenly h-screen max-w-screen-xl">
+    <main class="py-10 md:p-10 m-auto flex flex-col md:flex-row md:items-center md:justify-evenly md:h-screen max-w-screen-xl">
 
         <section class="font-sans flex justify-center align-center">
             <div class="w-80 shadow-2xl rounded-4xl bg-white">
@@ -74,11 +74,12 @@
                 discuss arrangements and make bookings. Once the walk has been completed you can rate 
                 your walker and book again all through the chat.</p>
         </article>
-        <div class="bg-purple-200 text-gray-600 text-xs text-center">
-            Challenge by <a class="hover:text-purple-700" href="https://www.frontendmentor.io/challenges/chat-app-css-illustration-O5auMkFqY" target="_blank">Frontend Mentor</a>. 
-            Coded by <a class="hover:text-purple-700" href="https://github.com/Tanya-Amber-L/" target="_blank">Tanya Leenders</a>.
-        </div>
     </main>
+    
+    <div class="bg-purple-200 text-gray-600 text-xs text-center">
+        Challenge by <a class="hover:text-purple-700" href="https://www.frontendmentor.io/challenges/chat-app-css-illustration-O5auMkFqY" target="_blank">Frontend Mentor</a>. 
+        Coded by <a class="hover:text-purple-700" href="https://github.com/Tanya-Amber-L/" target="_blank">Tanya Leenders</a>.
+    </div>
 
     <script src="https://kit.fontawesome.com/00d4002082.js" crossorigin="anonymous"></script>
 </body>
